changed homepage url

--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
       "enzyme-to-json/serializer"
     ]
   },
-  "homepage": "http://adagold.github.io/inspiration-board"
+  "homepage": "http://jackiesan.github.io/inspiration-board"
 }
